--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
   "require": {
     "craftcms/cms": "^3.4.25",
+    "craftcms/contact-form": "2.2.7",
     "craftcms/redactor": "2.6.1",
     "doublesecretagency/craft-bootstrap": "4.1.3.1",
     "vlucas/phpdotenv": "^3.4.0"
